explicit dryrun version

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -158,15 +158,15 @@ jobs:
           popd
         shell: bash
 
-      - name: Update Cargo Version
+      - name: Set dryrun Cargo version
         run: |
           pushd rust
             chmod +x set_cargo_package_version.sh
-            ./set_cargo_package_version.sh ${{needs.release.outputs.version}}
+            ./set_cargo_package_version.sh 42.42.42
           popd
         shell: bash
 
-      - name: Release dry run
+      - name: Release dryrun
         env:
           # TODO: Match the token with https://github.com/momentohq/client-sdk-rust/blob/main/.github/workflows/cd.yml
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_PUBLISH_TOKEN }}
