feat: publish to crates.io (#54)
* feat: publish to crates.io

update the pull request to do a dry run release and the push workflow
to actually release to crates instead of artifactory.

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -157,3 +157,24 @@ jobs:
             cargo build
           popd
         shell: bash
+
+      - name: Set dryrun Cargo version
+        run: |
+          pushd rust
+            chmod +x set_cargo_package_version.sh
+            ./set_cargo_package_version.sh 42.42.42
+          popd
+        shell: bash
+
+      - name: Release dryrun
+        env:
+          # TODO: Match the token with https://github.com/momentohq/client-sdk-rust/blob/main/.github/workflows/cd.yml
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_PUBLISH_TOKEN }}
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
+          pushd rust
+            cargo publish --verbose --allow-dirty --no-verify --dry-run
+          popd
+        shell: bash
