--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "momento-protos"
+description = "Generated GRPC and Protocol Buffers types for Momento clients"
+homepage = "gomomento.com/"
+repository = "https://github.com/momentohq/client_protos"
 license = "Apache-2.0"
 version = "0.1.0"
 authors = ["<eng@momentohq.com>"]
