--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,3 +16,8 @@ path = "src/lib.rs"
 
 [dependencies]
 protobuf = { version = "3", features = ["with-bytes"] }
+prost = "0.9.0"
+tonic = { version = "0.6.1", features = ["tls", "tls-roots", "tls-webpki-roots"] }
+
+[build-dependencies]
+tonic-build = "0.6.0"
