--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -141,19 +141,11 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Install protoc
-        run: ./install_protoc.sh
-
-      - name: Install protobuf-codegen
-        run: cargo install protobuf-codegen
-
       - name: Build package
         run: |
           set -e
           set -x
-          export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
           pushd rust
-            ./generate_protos.sh
             cargo build
           popd
         shell: bash
@@ -175,6 +167,6 @@ jobs:
           set -x
           export PATH=`pwd`/protoc/bin/:$HOME/.cargo/bin:$PATH
           pushd rust
-            cargo publish --verbose --allow-dirty --no-verify --dry-run
+            cargo publish --verbose --allow-dirty --dry-run
           popd
         shell: bash
