--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,11 @@ license = "Apache-2.0"
 version = "0.1.0"
 authors = ["<eng@momentohq.com>"]
 edition = "2018"
+includes = [
+    "Cargo.toml",
+    "src/**/*.rs",
+    "proto",
+]
 
 [lib]
 name = "momento_protos"
@@ -15,4 +20,8 @@ path = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protobuf = { version = "3", features = ["with-bytes"] }
+prost = "0.10.3"
+tonic = "0.7.2"
+
+[build-dependencies]
+tonic-build = "0.7.2"
