--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -165,21 +165,7 @@ jobs:
 
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: "5.0.x"
-
-      - uses: nuget/setup-nuget@v1
-        with:
-          nuget-version: "5.x"
-
-      - name: Configure Artifactory publish credentials
-        run: |
-          set -e
-          set -x
-          pushd csharp
-            nuget sources Add -Name Artifactory -Source https://momento.jfrog.io/artifactory/api/nuget/nuget-local -username deploy-user -password ${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }}
-            nuget setapikey deploy-user:${{ secrets.PUBLIC_ARTIFACTORY_DEPLOY_USER_MAGIC_PASSTOKEN }} -Source Artifactory
-          popd
-        shell: bash
+          dotnet-version: "6.0.x"
 
       - name: Pack and Publish
         run: |
@@ -188,10 +174,13 @@ jobs:
             VERSION="${{needs.release.outputs.version}}"
             echo "version: ${VERSION}"
             dotnet build --configuration Release
-            nuget pack -Version ${VERSION} -Properties Configuration=Release
-            nuget push Momento.${VERSION}.nupkg -Source Artifactory -Verbosity detailed
+            dotnet pack -property:Version=${VERSION} --configuration Release
+            pushd bin/Release
+              dotnet nuget push Momento.Protos.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key=${{secrets.NUGET_API_KEY}}
+            popd
           popd
         shell: bash
+
   publish_rust:
     runs-on: ubuntu-latest
     needs: release
