--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -69,6 +69,48 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
+  publish_javascript-web:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    needs: release
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Install protoc
+        run: ./install_protoc.sh
+
+      - name: Build package
+        run: |
+          set -e
+          set -x
+          export PATH=`pwd`/protoc/bin/:$PATH
+          pushd javascript-web
+            npm ci
+            npm run build
+          popd
+        shell: bash
+
+      - name: Publish npm package
+        run: |
+          export VERSION="${{ needs.release.outputs.version }}"
+          echo "Publishing package with version $VERSION"
+          pushd javascript-web
+            mv package.json package.json.ORIG
+            cat package.json.ORIG|jq ". += {\"version\": \"$VERSION\"}" > package.json
+            npm publish
+          popd
+        shell: bash
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
   publish_kotlin:
     runs-on: ubuntu-latest
     needs: release
