--- a/javascript-web/package.json
+++ b/javascript-web/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh && tsc"
+    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh linux && tsc"
   },
   "author": "",
   "license": "MIT",
