--- a/javascript/package.json
+++ b/javascript/package.json
@@ -13,7 +13,6 @@
     "build": "rm -rf dist && mkdir dist && ./generate_protos.sh && tsc"
   },
   "author": "",
-  "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "1.0.2",
     "@types/node": "16.10.3",
@@ -21,9 +20,9 @@
     "typescript": "4.4.3"
   },
   "dependencies": {
+    "@grpc/grpc-js": "1.7.3",
     "@types/google-protobuf": "3.15.5",
-    "google-protobuf": "3.18.1",
-    "@grpc/grpc-js": "1.5.10"
+    "google-protobuf": "3.18.1"
   },
   "files": [
     "dist",
