feat: move ping service to separate proto file
For some reason, the stubs generated for the server-side for kotlin
were very messed up when there were two services defined in the
same file, and it was impossible to bind a separate service to
the ping implementation.  This commit moves the ping protos to
a new file.

I've tested this via composite build locally and it is working.

--- a/csharp/Momento.Protos.csproj
+++ b/csharp/Momento.Protos.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Protobuf Include="../proto/cacheclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/controlclient.proto" GrpcServices="Client" />
+    <Protobuf Include="../proto/cacheping.proto" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
