chore: auto-release the java artifact and update dependencies
Automatically release the artifact when the publish_java workflow runs.

Switch to gRPC and Protobuf BOMs for dependency versioning and update
to the latest versions.

Note which dependency versions are pulled from other dependencies for
future updates.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -130,7 +130,7 @@ jobs:
         with:
           build-root-directory: ./java
           gradle-version: wrapper
-          arguments: publishToSonatype closeSonatypeStagingRepository  #TODO: closeAndReleaseStagingRepository
+          arguments: publishToSonatype closeAndReleaseStagingRepository
 
   publish_kotlin:
     runs-on: ubuntu-latest
