--- a/javascript/package.json
+++ b/javascript/package.json
@@ -2,15 +2,15 @@
   "name": "@gomomento/generated-types",
   "description": "Types for Momento services",
   "version": "0.0.1",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/momentohq/client_protos"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh && tsc"
+    "build": "rm -rf dist && mkdir -p src && ./generate_protos.sh && tsc"
   },
   "author": "",
   "devDependencies": {
@@ -25,8 +25,6 @@
     "google-protobuf": "3.18.1"
   },
   "files": [
-    "dist",
-    "index.d.ts",
-    "index.js"
+    "dist"
   ]
 }
