--- a/javascript-web/tsconfig.json
+++ b/javascript-web/tsconfig.json
@@ -6,7 +6,8 @@
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "declaration": true
+        "declaration": true,
+        "outDir": "dist"
     },
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended",
