--- a/javascript-web/package.json
+++ b/javascript-web/package.json
@@ -2,8 +2,8 @@
   "name": "@gomomento/generated-types-webtext",
   "description": "Types for Momento services",
   "version": "0.0.1",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/momentohq/client_protos"
@@ -22,8 +22,6 @@
   "dependencies": {
   },
   "files": [
-    "dist",
-    "index.d.ts",
-    "index.js"
+    "dist"
   ]
 }
