feat: fix packaging for new grpc/protobuf versions
This commit fixes some packaging issues with the new versions
of grpc/protobuf and the recent changes to exclude the .ts files
from the dist.

In particular:

* Don't nest the `src` dir in the distributable
* A bunch of .d.ts files and .js files were missing from the web
  sdk

--- a/javascript-web/package.json
+++ b/javascript-web/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh linux && tsc"
+    "build": "rm -rf dist && mkdir dist && ./generate_protos.sh linux && cp index.ts src/ && tsc && cp src/*.d.ts ./dist && cp src/*.js ./dist"
   },
   "author": "",
   "license": "MIT",
