--- a/python/.gitignore
+++ b/python/.gitignore
@@ -1,7 +1,7 @@
 build
 LICENSE.txt
 dist/
-src/*.egg-info
+src/momento_wire_types/*.egg-info
 src/momento_wire_types/*pb2*
 src/momento_wire_types/*.pyc
 src/momento_wire_types/__pycache__
