--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,6 +1,38 @@
-[build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
+[tool.poetry]
+name = "momento-wire-types"
+version = "0.0.0"
+description = "Momento Client Proto Generated Files"
+authors = ["Momento <hello@momentohq.com>"]
+
+license = "Apache-2.0"
+
+documentation = "https://docs.momentohq.com/"
+homepage = "https://gomomento.com"
+readme = "README.md"
+repository = "https://github.com/momentohq/client-protos"
+
+keywords = ["Momento", "caching", "key-value store", "serverless"]
+
+classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "Operating System :: OS Independent",
+  "Framework :: AsyncIO",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "Topic :: Internet",
+  "Natural Language :: English",
+  "Typing :: Typed",
 ]
-build-backend = "setuptools.build_meta"
+
+[tool.poetry.dependencies]
+python = "^3.7"
+protobuf = ">=3,<5"
+grpcio = "*"
+
+
+[tool.poetry.group.dev.dependencies]
+grpcio-tools = "^1.54.2"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
