--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -24,6 +24,8 @@ classifiers = [
   "Typing :: Typed",
 ]
 
+include = ["momento_wire_types/**/*.py", "momento_wire_types/**/*.pyi"]
+
 [tool.poetry.dependencies]
 python = "^3.7"
 protobuf = ">=3,<5"
