refactor: re-use `make install` in workflows
Since the Makefile already defines an install step, we just re-use
that in the workflow instead of repeating it.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -215,7 +215,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: python
-        run: poetry install
+        run: make install
 
       - name: Bump version
         working-directory: python
