--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,7 +14,7 @@ jobs:
         id: current-time
 
       - uses: actions/checkout@v2
-      
+
       - name: Commitlint and Other Shared Build Steps
         uses: momentohq/standards-and-practices/github-actions/shared-build@gh-actions-v1
         env:
@@ -38,7 +38,7 @@ jobs:
             npm run build
           popd
         shell: bash
-  
+
   build_javascriptweb:
     runs-on: ubuntu-latest
 
@@ -162,7 +162,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: python
-        run: poetry install
+        run: make install
 
       - name: Build package
         working-directory: python
