--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -227,7 +227,10 @@ jobs:
           set -e
           set -x
           pushd rust
-            # We --no-verify because we have build.rs editing src instead of $BUILD_OUT :-(
-            cargo publish --verbose --allow-dirty --dry-run --no-verify
+            # During a PR we build the workspace, which will generate protos. They should be the same as what you checked in.
+            # If not, this should fail due to local modifications, or rather, a diff between what you think protoc should have
+            # output and what the github protoc we have installed thinks it should output. Or you just changed protos and forgot
+            # to check in the new generated code ;-)
+            cargo publish -p momento-protos --verbose --dry-run
           popd
         shell: bash
