--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -207,6 +207,8 @@ jobs:
           set -e
           set -x
           pushd rust
+            echo make sure the code generator runs first so the files are there when we build momento-protos
+            cargo build -p codegenerator
             cargo build
           popd
         shell: bash
@@ -227,7 +229,6 @@ jobs:
           set -e
           set -x
           pushd rust
-            # We --no-verify because we have build.rs editing src instead of $BUILD_OUT :-(
-            cargo publish --verbose --allow-dirty --dry-run --no-verify
+            cargo publish -p momento-protos --verbose --dry-run --allow-dirty --no-verify
           popd
         shell: bash
