--- a/javascript/package.json
+++ b/javascript/package.json
@@ -13,6 +13,7 @@
     "build": "rm -rf dist && mkdir -p src && ./generate_protos.sh && cp index.ts src/ && tsc"
   },
   "author": "",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@tsconfig/node16": "1.0.2",
     "@types/node": "16.10.3",
