--- a/csharp/Momento.Protos.csproj
+++ b/csharp/Momento.Protos.csproj
@@ -19,6 +19,7 @@
     <Protobuf Include="../proto/cacheclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/controlclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/cacheping.proto" GrpcServices="Client" />
+    <Protobuf Include="../proto/vectorindex.proto" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
