--- a/javascript-web/package.json
+++ b/javascript-web/package.json
@@ -17,10 +17,13 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@tsconfig/node16": "1.0.2",
+    "@types/google-protobuf": "^3.15.6",
     "@types/node": "16.10.3",
+    "google-protobuf": "3.21.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "google-protobuf": "3.21.2",
     "grpc-web": "1.4.2"
   },
   "files": [
