--- a/csharp/Momento.Protos.csproj
+++ b/csharp/Momento.Protos.csproj
@@ -20,6 +20,8 @@
     <Protobuf Include="../proto/controlclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/cacheping.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/vectorindex.proto" GrpcServices="Client" />
+    <Protobuf Include="../proto/cachepubsub.proto" GrpcServices="Client" />
+    <Protobuf Include="../proto/extensions.proto" GrpcServices="Client" />
   </ItemGroup>
 
   <ItemGroup>
