feat: add Token protos for dotnet, missing exports for vectorindex namespace in grpc-web
* chore: add missing export for vectorindex namespace in grpc-web (#202)
* feat: add Token proto for dotnet (#203)

--- a/csharp/Momento.Protos.csproj
+++ b/csharp/Momento.Protos.csproj
@@ -16,11 +16,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Protobuf Include="../proto/permissionmessages.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/cacheclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/controlclient.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/cacheping.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/vectorindex.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/cachepubsub.proto" GrpcServices="Client" />
+    <Protobuf Include="../proto/token.proto" GrpcServices="Client" />
     <Protobuf Include="../proto/extensions.proto" GrpcServices="Client" />
   </ItemGroup>
 
