--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -157,6 +157,29 @@ jobs:
           gradle-version: wrapper
           arguments: publishToSonatype closeAndReleaseStagingRepository
 
+  publish_kotlin:
+    runs-on: ubuntu-latest
+    needs: [ release, changes ]
+    # Temporarily disable this while debugging conditional release action
+    #if: ${{ needs.changes.outputs.protos == 'true' || needs.changes.outputs.java == 'true' }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Publish to sonatype
+        env:
+          SONATYPE_SIGNING_KEY: ${{ secrets.SONATYPE_SIGNING_KEY }}
+          SONATYPE_SIGNING_KEY_PASSWORD: ${{ secrets.SONATYPE_SIGNING_KEY_PASSWORD }}
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          KOTLIN_PROTOS_VERSION: ${{ needs.release.outputs.version }}
+        uses: gradle/gradle-build-action@v2
+        with:
+          build-root-directory: ./kotlin
+          gradle-version: wrapper
+          arguments: publishToSonatype closeSonatypeStagingRepository
+
   publish_python:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
