--- a/javascript-web/package.json
+++ b/javascript-web/package.json
@@ -19,10 +19,13 @@
     "@tsconfig/node16": "1.0.2",
     "@types/google-protobuf": "^3.15.6",
     "@types/node": "16.10.3",
+    "grpc-web": "1.4.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "google-protobuf": "3.21.2",
+    "google-protobuf": "3.21.2"
+  },
+  "peerDependencies": {
     "grpc-web": "1.4.2"
   },
   "files": [
