--- a/javascript/package.json
+++ b/javascript/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@grpc/grpc-js": "1.13.1",
     "@tsconfig/node16": "1.0.2",
     "@types/google-protobuf": "3.15.6",
     "@types/node": "16.10.3",
@@ -23,8 +24,10 @@
     "typescript": "4.9.5"
   },
   "dependencies": {
-    "@grpc/grpc-js": "1.13.1",
     "google-protobuf": "3.21.2"
+  },
+  "peerDependencies": {
+    "@grpc/grpc-js": "1.13.1"
   },
   "files": [
     "dist"
