temp: all of them

--- a/rust/momento-protos/src/.gitignore
+++ b/rust/momento-protos/src/.gitignore
@@ -4,3 +4,5 @@
 # Need this file to list the proto module imports
 !lib.rs
 !protosocket/mod.rs
+# TODO and the code files because I need a git dependency right now without releasing.
+!*.rs
