--- a/rust/momento-protos/src/.gitignore
+++ b/rust/momento-protos/src/.gitignore
@@ -4,3 +4,6 @@
 # Need this file to list the proto module imports
 !lib.rs
 !protosocket/mod.rs
+
+# TEMP: and all code files for a git dependency right now without releasing
+!*.rs
